@@ -1,5 +1,10 @@
 2009-02-17 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/nact/nact-export-format.h:
+	* src/nact/nact-export-format.c:
+	* src/core/na-exporter.h:
+	* src/core/na-exporter.c: Update export treatements.
+
 	* src/api/na-iexporter.h:
 	* src/core/na-iexporter.c:
 	* src/io-xml/naxml-module.c:
